# bbp-workflow

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  .readthedocs.yml  AUTHORS.txt  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  bbp-workflow-launch.sh  logging.cfg  luigi.cfg  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: sdist.yml  tox.yml
bbp_workflow/: __init__.py  luigi.py  settings.py  slurm.py  target.py  task.py  util.py
bbp_workflow/generation/: __init__.py  command.py  entity.py  environment.py  exception.py  forge_ensure_once.py  generator.py  generator_base.py  parameter.py  target.py  variant.py  workflow.py
bbp_workflow/sbo/: __init__.py  entity.py  target.py  task.py  util.py
bbp_workflow/sbo/analysis/: __init__.py  task.py
bbp_workflow/sbo/circ/: __init__.py  task.py
bbp_workflow/sbo/emodel/: __init__.py  task.py
bbp_workflow/sbo/sim/: task.py
bbp_workflow/sbo/viz/: task.py
bbp_workflow/simulation/: __init__.py  sim_writer.py  task.py  util.py  vocab.py
doc/source/: api.rst  conf.py  dependencies.rst  index.rst  workflow.rst
tests/: test_alloc.py  test_generation_command.py  test_generation_entity.py  test_generation_environment.py  test_generation_generator.py  test_generation_parameter.py  test_generation_variant.py  test_sim_writer.py  test_simulation.py  test_slurm.py  test_task.py  test_util.py  test_xarray.py  util.py
tests/data/: cell_position_config_resp.json  config.json  config_coupled.json  model_building_config_resp.json  sim-campaign.cfg  simulation_config.tmpl  variant_config_metadata.json  variant_tool_distribution.cwl  variant_tool_metadata.json  variant_workflow_distribution.cwl  variant_workflow_metadata.json
workflows/: foo.cfg  foo.py
(+12 files in other folders)
